testdata/golden/sema/invalid/default_nested_reference.sg
type Leaf = {
    ref: &int,
};

type Branch = {
    leaves: Leaf[],
};

type Root = {
    branch: Branch,
};

type Forest = {
    roots: Root[],
};

type ForestAlias = Forest;

fn main() {
    let _ = default::<ForestAlias>();
}
